Benchamark report layout break fixed

--- a/app/assets/stylesheets/reports_pdf.sass
+++ b/app/assets/stylesheets/reports_pdf.sass
@@ -566,6 +566,7 @@ body
           font-size: 15px
           font-weight: 700
           background: #d2f0f3
+          border-radius: 3px
     .graph_section
       border: 1px solid #cccccc
       padding: 15px 25px 
